{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 85,
  "lineage": "9172554d-82e1-d69d-395e-b8c4893edbd3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_egress_sg-asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:security-group/sg-01dea7a668233abc2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "0",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "id": "sg-01dea7a668233abc2",
            "ingress": [],
            "name": "terraform-20230124060402113500000002",
            "name_prefix": "terraform-",
            "owner_id": "460756703371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_egress_sg-asia"
            },
            "tags_all": {
              "Name": "allow_all_egress_sg-asia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e228481ffec485f3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_egress_sg-emea",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].emea",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:460756703371:security-group/sg-022edfdeb88b016e6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "0",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "id": "sg-022edfdeb88b016e6",
            "ingress": [],
            "name": "terraform-20230124060403488000000002",
            "name_prefix": "terraform-",
            "owner_id": "460756703371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_egress_sg-emea"
            },
            "tags_all": {
              "Name": "allow_all_egress_sg-emea"
            },
            "timeouts": null,
            "vpc_id": "vpc-0017170a593df7c9b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_icmp_sg-asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:security-group/sg-0f337ef5b16341afa",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f337ef5b16341afa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230124060402113700000003",
            "name_prefix": "terraform-",
            "owner_id": "460756703371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_icmp_sg-asia"
            },
            "tags_all": {
              "Name": "allow_icmp_sg-asia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e228481ffec485f3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_icmp_sg-emea",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].emea",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:460756703371:security-group/sg-02eb8d9bdbb69b30e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02eb8d9bdbb69b30e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230124060403489500000003",
            "name_prefix": "terraform-",
            "owner_id": "460756703371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_icmp_sg-emea"
            },
            "tags_all": {
              "Name": "allow_icmp_sg-emea"
            },
            "timeouts": null,
            "vpc_id": "vpc-0017170a593df7c9b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_sg-asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].asia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:460756703371:security-group/sg-04453d4a2b45bc725",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04453d4a2b45bc725",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230124060402113500000001",
            "name_prefix": "terraform-",
            "owner_id": "460756703371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_sg-asia"
            },
            "tags_all": {
              "Name": "allow_ssh_sg-asia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e228481ffec485f3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_sg-emea",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].emea",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:460756703371:security-group/sg-0083274c478d9d600",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0083274c478d9d600",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230124060403487900000001",
            "name_prefix": "terraform-",
            "owner_id": "460756703371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_sg-emea"
            },
            "tags_all": {
              "Name": "allow_ssh_sg-emea"
            },
            "timeouts": null,
            "vpc_id": "vpc-0017170a593df7c9b"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}